// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alpha renders correctly 1`] = `
<DocumentFragment>
  <div
    style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
  >
    <div
      style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; overflow: hidden;"
    >
      <div
        style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: url("null");"
      />
    </div>
    <div
      style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: linear-gradient(to right, rgba(255, 0, 0, 0) 0%, rgb(255, 0, 0) 100%);"
    />
    <div
      style="position: relative; height: 100%; margin: 0px 3px;"
    >
      <div
        style="position: absolute; left: 100%;"
      >
        <div
          style="width: 4px; -webkit-border-radius: 1px; border-radius: 1px; height: 8px; -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, .6); box-shadow: 0 0 2px rgba(0, 0, 0, .6); background: rgb(255, 255, 255); margin-top: 1px; -webkit-transform: translateX(-2px); transform: translateX(-2px);"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Checkboard renders children correctly 1`] = `
<DocumentFragment>
  <button
    style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: url("null");"
  >
    Click
  </button>
</DocumentFragment>
`;

exports[`Checkboard renders correctly 1`] = `
<DocumentFragment>
  <div
    style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: url("null");"
  />
</DocumentFragment>
`;

exports[`EditableInput renders correctly 1`] = `
<DocumentFragment>
  <div
    style="position: relative;"
  >
    <input
      id="rc-editable-input-1"
      placeholder="#fff"
      spellcheck="false"
      value="UNDEFINED"
    />
    <label
      for="rc-editable-input-1"
    >
      Hex
    </label>
  </div>
</DocumentFragment>
`;

exports[`Hue renders correctly 1`] = `
<DocumentFragment>
  <div
    style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
  >
    <div
      class="hue-horizontal"
      style="padding: 0px 2px; position: relative; height: 100%;"
    >
      <style>
        
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
      </style>
      <div
        style="position: absolute; left: 0%;"
      >
        <div
          style="margin-top: 1px; width: 4px; -webkit-border-radius: 1px; border-radius: 1px; height: 8px; -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, .6); box-shadow: 0 0 2px rgba(0, 0, 0, .6); background: rgb(255, 255, 255); -webkit-transform: translateX(-2px); transform: translateX(-2px);"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Saturation renders correctly 1`] = `
<DocumentFragment>
  <div
    style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: rgb(255, 0, 0);"
  >
    <style>
      
          .saturation-white {
            background: -webkit-linear-gradient(to right, #fff, rgba(255,255,255,0));
            background: linear-gradient(to right, #fff, rgba(255,255,255,0));
          }
          .saturation-black {
            background: -webkit-linear-gradient(to top, #000, rgba(0,0,0,0));
            background: linear-gradient(to top, #000, rgba(0,0,0,0));
          }
        
    </style>
    <div
      class="saturation-white"
      style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
    >
      <div
        class="saturation-black"
        style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
      />
      <div
        style="position: absolute; top: 0%; left: 100%; cursor: default;"
      >
        <div
          style="width: 4px; height: 4px; -webkit-box-shadow: 0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4); box-shadow: 0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4); -webkit-border-radius: 50%; border-radius: 50%; -webkit-transform: translate(-2px, -2px); transform: translate(-2px, -2px);"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Swatch renders correctly 1`] = `
<DocumentFragment>
  <span>
    <div
      style="background: rgb(51, 51, 51); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; opacity: 0.4;"
      tabindex="0"
      title="#333"
    />
  </span>
</DocumentFragment>
`;

exports[`Swatch renders custom title correctly 1`] = `
<DocumentFragment>
  <span>
    <div
      style="background: rgb(255, 255, 255); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
      tabindex="0"
      title="white"
    />
  </span>
</DocumentFragment>
`;

exports[`Swatch renders with an onMouseOver handler correctly 1`] = `
<DocumentFragment>
  <span>
    <div
      style="background: rgb(255, 255, 255); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none;"
      tabindex="0"
      title="white"
    />
  </span>
</DocumentFragment>
`;
